# task

cpppackage/: CMakeLists.txt  package.xml
cpppackage/src/: cppnode.cpp
install/: local_setup.sh  setup.sh
install/cpppackage/lib/cpppackage/: cppnode
install/cpppackage/share/cpppackage/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cpppkg/share/ament_index/resource_index/parent_prefix_path/: cpppkg
install/cpppkg/share/cpppkg/: package.sh
install/pypkg/lib/pypkg/: pynode
install/pypkg/share/pypkg/: package.sh
log/: latest_build
pypkg/: package.xml  setup.py
pypkg/pypkg/: pynode.py
